# acc

./: .travis.yml  LICENSE  README.md  acc.cabal  bench-results  bench.bash  build.bash  format.bash  test.bash  typecheck.bash
.github/workflows/: check.yaml  ci.yaml
bench/: Main.hs
benchmark/: Main.hs
test/: Main.hs
